responsive design correction number 2, adding margin top to the main container so it can display complete on mobile

--- a/css/desktop.style.css
+++ b/css/desktop.style.css
@@ -122,7 +122,7 @@ body {
 
 @media screen and (max-width: 800px) {
   .main_container {
-    margin: auto;
+    margin: 50px auto;
     width: 320px;
     height: 500px;
     display: grid;
